# batchismo-core

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  ORCHESTRATOR-TASK.md  README.md  testchat.txt  testchat2.txt
.github/workflows/: ci.yml  release.yml
crates/bat-agent/: Cargo.toml
crates/bat-agent/src/: agent_loop.rs  gateway_bridge.rs  llm.rs  main.rs  openai_client.rs  policy.rs  provider.rs
crates/bat-agent/src/tools/: app_open.rs  ask_orchestrator.rs  clipboard.rs  exec_kill.rs  exec_list.rs  exec_output.rs  exec_run.rs  exec_write.rs  fs_list.rs  fs_read.rs  fs_read_pdf.rs  fs_write.rs  mod.rs  screenshot.rs  session_answer.rs  session_cancel.rs  session_instruct.rs  session_pause.rs  session_resume.rs  session_spawn.rs  session_status.rs  shell_run.rs  system_info.rs  web_fetch.rs  web_search.rs
crates/bat-cli/: Cargo.toml
crates/bat-cli/src/: main.rs
crates/bat-gateway/: Cargo.toml  build.rs
crates/bat-gateway/src/: classifier.rs  config.rs  consolidation.rs  correction.rs  cost_governor.rs  db.rs  events.rs  ipc.rs  lib.rs  memory.rs  process_manager.rs  reflection.rs  sandbox.rs  session.rs  skills.rs  stt.rs  system_prompt.rs  tts.rs
crates/bat-gateway/src/channels/: discord.rs  telegram.rs
crates/bat-shell/: Cargo.toml  nsis-hooks.nsi  package-lock.json  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
crates/bat-shell/capabilities/: default.json
crates/bat-shell/icons/: icon.icns
crates/bat-shell/scripts/: stage-sidecar.mjs
crates/bat-shell/src/: commands.rs  main.rs
crates/bat-shell/ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
crates/bat-shell/ui/src/: App.tsx  types.ts
crates/bat-shell/ui/src/components/: ActivityPanel.tsx  ChatPanel.tsx  InputBar.tsx  LogsPanel.tsx  MemoryPanel.tsx  MessageBubble.tsx  SessionSwitcher.tsx  Sidebar.tsx  StatusBar.tsx  StreamingText.tsx  ToolCallBlock.tsx  UsagePanel.tsx
crates/bat-shell/ui/src/components/onboarding/: AccessStep.tsx  ApiKeyStep.tsx  ChannelStep.tsx  FirstTaskStep.tsx  NameStep.tsx  OnboardingWizard.tsx  OpenAIKeyStep.tsx  ProviderStep.tsx  ReadyStep.tsx  WelcomeStep.tsx
crates/bat-shell/ui/src/components/settings/: AboutPage.tsx  AgentConfigPage.tsx  ApiKeysPage.tsx  AuditPage.tsx  ChannelsPage.tsx  LocalLlmPage.tsx  MetricsPage.tsx  OllamaPage.tsx  PathPoliciesPage.tsx  PersonalityPage.tsx  SandboxPage.tsx  SettingsPanel.tsx  SkillsPage.tsx  ToolsPage.tsx  VoicePage.tsx
crates/bat-shell/ui/src/hooks/: useBatEvents.ts  useChat.ts
crates/bat-shell/ui/src/lib/: tauri.ts
crates/bat-tui/: Cargo.toml
crates/bat-tui/src/: app.rs  event.rs  lib.rs  main.rs
crates/bat-tui/src/ui/: activity.rs  chat.rs  help.rs  logs.rs  memory.rs  mod.rs  onboarding.rs  settings.rs  usage.rs
crates/bat-types/: Cargo.toml
crates/bat-types/src/: audit.rs  classifier.rs  config.rs  ipc.rs  lib.rs  memory.rs  message.rs  policy.rs  session.rs  usage.rs
project/: PRD.md  ROADMAP.md
scripts/: dev-setup.ps1  dev-setup.sh
