[package]
name = "bat-shell"
version = "0.1.0"
edition = "2021"
default-run = "bat-shell"

[[bin]]
name = "bat-shell"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bat-types = { path = "../bat-types" }
bat-gateway = { path = "../bat-gateway" }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
